CIRC-1875 Fix code smell