@@ -45,7 +45,7 @@ public class AsyncCoordinationUtil {
       collection.stream().map(asyncAction).collect(Collectors.toList());
 
     return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-      .thenApply(v -> futures.stream().map(CompletableFuture::join).collect(Collectors.toList()));
+      .thenApply(v -> futures.stream().map(CompletableFuture::join).toList());
   }
 
   /**
